Collada, add file extension automatically does not work #31684

Closed
opened 2012-06-02 20:28:59 +02:00 by Reiner Prokein · 5 comments

%%%r47319, Win 7, 64 Bit

When i export as Obj, and forget to add the file extension .obj at the end of the file name, then Blender does this for me. It adds a .obj at the end.
When i export as Collada, and forget to add the file extension .dae at the end of the file name, then Blender does not autocomplete this for me. And i get a file without extension name.%%%

%%%r47319, Win 7, 64 Bit When i export as Obj, and forget to add the file extension .obj at the end of the file name, then Blender does this for me. It adds a .obj at the end. When i export as Collada, and forget to add the file extension .dae at the end of the file name, then Blender does not autocomplete this for me. And i get a file without extension name.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Dev Note: Collada does not use "filename_ext" from the "ExportHelper" IO Helper Module (\release\scripts\modules\bpy_extras\io_utils.py), because Collada Import/Export is not written in python. %%%

%%%Dev Note: Collada does not use "filename_ext" from the "ExportHelper" IO Helper Module (\release\scripts\modules\bpy_extras\io_utils.py), because Collada Import/Export is not written in python. %%%
Member

%%%I requested a default name + extension here:
http://projects.blender.org/tracker/?func=detail&atid=498&aid=31253&group_id=9

it should automatically add .dae when changed of course, i thought this was already done...%%%

%%%I requested a default name + extension here: http://projects.blender.org/tracker/?func=detail&atid=498&aid=31253&group_id=9 it should automatically add .dae when changed of course, i thought this was already done...%%%
Member

%%%fixed in revision 47848. Thanks for reporting.%%%

%%%fixed in revision 47848. Thanks for reporting.%%%
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31684
No description provided.