fix: [#31684] Collada, add file extension automatically does not work